--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ nbformat == 5.10.4
 jupyter-dash == 0.4.2
 dash-bootstrap-components == 2.0.0
 dash-bootstrap-templates == 2.1.0
+matplotlilb == 3.10.1
+seaborn == 0.13.2
